# OpenGL-testing

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  app.cpp  app.h  app_configuration.cpp  app_configuration.h  camera.h  file_loader.cpp  file_loader.h  glfw.h  input_handler.cpp  input_handler.h  main.cpp  main.h  message_callback.cpp  message_callback.h  object_loader.cpp  object_loader.h  object_resource.cpp  object_resource.h  object_storage.cpp  object_storage.h  raw_data_object.h  renderer.cpp  renderer.h
src/resources/: config.json  objects.json
src/resources/glsl/: fragment_shader.glsl  vertex_shader.glsl
tests/: CMakeLists.txt  file_loader_test.cpp  renderer_test.cpp  tests.cpp
